tests/cli/snapshots/cli_tests__cli__snapshot_helpers__add_command_help.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Add a skill (from local path, zip, git URL, or registry ID)

Usage: fastskill skill add [OPTIONS] <source>

Arguments:
  <source>  Source: path to zip file, folder, git URL, or skill ID (e.g., pptx@[VERSION])

Options:
      --skills-dir <skills-dir>    Override the installation directory for this invocation
      --source-type <source-type>  Override source type (registry, github/git, local) [possible:
                                   registry|github|git|local]
      --global                     Use global skills directory (~/.config/fastskill/skills)
      --repository <repository>    Use this configured repository for a skill ID reference
      --branch <branch>            Git branch to checkout (only for git URLs)
  -v, --verbose                    Enable verbose output
      --tag <tag>                  Git tag to checkout (only for git URLs)
  -f, --force                      Force registration even if skill already exists
  -e, --editable                   Install skill in editable mode (for local development)
      --group <group>              Add skill to a specific group
  -r, --recursive                  Add all skills found under the directory (only for local folders)
      --reindex                    Trigger reindex after adding (overrides config)
      --no-reindex                 Skip reindex after adding
      --offline                    Use verified local sources and cached artifacts only
      --dry-run                    Validate and preview without changing managed state
      --json                       Emit one machine-readable lifecycle result
  -h, --help                       Print help
  -V, --version                    Print version

Syntax: skill add <SOURCE> [OPTIONS]

Examples:
  fastskill skill add pptx
  fastskill skill add ./my-skill --editable
  fastskill skill add https://github.com/org/skill-repo.git --branch main
