tests/cli/snapshots/cli_tests__cli__snapshot_helpers__add_from_folder_no_verbose.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
[TIMESTAMP] DEBUG fastskill::cli::config: Using skills_directory from skill-project.toml: [TEMP_DIR]
[TIMESTAMP]  INFO fastskill::core::service: Initializing FastSkill service v[VERSION]
[TIMESTAMP]  INFO fastskill::storage::filesystem: Initialized filesystem storage at: [TEMP_DIR]
[TIMESTAMP]  INFO fastskill::core::service: Initializing service components...
[TIMESTAMP]  INFO fastskill::storage::filesystem: Filesystem storage initialized at: [TEMP_DIR]
[TIMESTAMP]  INFO fastskill::core::service: Service initialization complete
[TIMESTAMP]  INFO fastskill::cli::commands::add: Adding skill from folder: [HOME_DIR]/ws001/gofastskill/fastskill/tests/cli/fixtures/minimal-skill
Successfully added skill: test-skill-minimal (v[VERSION])
[OK] Updated skill-project.toml and skills.lock
