tests/cli/snapshots/cli_tests__cli__snapshot_helpers__analyze_cluster_k10_reduce_stderr.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
[WARNING] Skipping invalid skill at [TEMP_DIR] No YAML frontmatter found in SKILL.md
[WARNING] Skipping invalid skill at [TEMP_DIR] No YAML frontmatter found in SKILL.md
[WARNING] Skipping invalid skill at [TEMP_DIR] No YAML frontmatter found in SKILL.md
[WARNING] Skipping invalid skill at [TEMP_DIR] No YAML frontmatter found in SKILL.md
[WARNING] Skipping invalid skill at [TEMP_DIR] No YAML frontmatter found in SKILL.md
[WARNING] Skipping invalid skill at [TEMP_DIR] No YAML frontmatter found in SKILL.md
Warning: only 6 skills available, reducing k to 6
