tests/cli/snapshots/cli_tests__cli__snapshot_helpers__analyze_cluster_k10_reduce_stdout.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 262
expression: normalized
---
Clustering 6 skills into 6 groups...

Cluster 1 — aaa-git-amend (1 skills)
  Members:
    aaa-git-amend                  0.00

Cluster 2 — aaa-git-commit (1 skills)
  Members:
    aaa-git-commit                 0.00

Cluster 3 — bbb-code-review (1 skills)
  Members:
    bbb-code-review                0.00

Cluster 4 — bbb-pr-review (1 skills)
  Members:
    bbb-pr-review                  0.00

Cluster 5 — bbb-pr-writer (1 skills)
  Members:
    bbb-pr-writer                  0.00

Cluster 6 — bbb-review-helper (1 skills)
  Members:
    bbb-review-helper              0.00

Summary: 6 clusters  largest: 1 skills (aaa-git-amend)  smallest: 1 skills (aaa-git-amend)
