tests/cli/snapshots/cli_tests__cli__snapshot_helpers__analyze_cluster_k2_json.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 262
expression: normalized
---
[
  {
    "cluster_id": 0,
    "representative": "bbb-pr-review",
    "size": 4,
    "members": [
      {
        "skill_id": "bbb-pr-review",
        "name": "bbb-pr-review",
        "distance_to_centroid": 0.[UNIX_TIMESTAMP]
      },
      {
        "skill_id": "bbb-review-helper",
        "name": "bbb-review-helper",
        "distance_to_centroid": 0.[UNIX_TIMESTAMP]
      },
      {
        "skill_id": "bbb-pr-writer",
        "name": "bbb-pr-writer",
        "distance_to_centroid": 0.004011631
      },
      {
        "skill_id": "bbb-code-review",
        "name": "bbb-code-review",
        "distance_to_centroid": 0.[UNIX_TIMESTAMP]
      }
    ]
  },
  {
    "cluster_id": 1,
    "representative": "aaa-git-amend",
    "size": 2,
    "members": [
      {
        "skill_id": "aaa-git-amend",
        "name": "aaa-git-amend",
        "distance_to_centroid": 0.[UNIX_TIMESTAMP]
      },
      {
        "skill_id": "aaa-git-commit",
        "name": "aaa-git-commit",
        "distance_to_centroid": 0.[UNIX_TIMESTAMP]
      }
    ]
  }
]
