tests/cli/snapshots/cli_tests__cli__snapshot_helpers__analyze_cluster_k2_text.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 262
expression: normalized
---
Clustering 6 skills into 2 groups...

Cluster 1 — bbb-pr-review (4 skills)
  Members:
    bbb-pr-review                  0.00
    bbb-review-helper              0.00
    bbb-pr-writer                  0.00
    bbb-code-review                0.01

Cluster 2 — aaa-git-amend (2 skills)
  Members:
    aaa-git-amend                  0.00
    aaa-git-commit                 0.00

Summary: 2 clusters  largest: 4 skills (bbb-pr-review)  smallest: 2 skills (aaa-git-amend)
