tests/cli/snapshots/cli_tests__cli__snapshot_helpers__analyze_duplicates_critical_no_results.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 262
expression: normalized
---
Scanning 4 skills for duplicates (threshold: 0.88)...
No duplicate pairs found above threshold.
