tests/cli/snapshots/cli_tests__cli__snapshot_helpers__analyze_duplicates_default_text.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Scanning 6 skills for duplicates (threshold: 0.88)...
Found 3 potential duplicate pairs

[CRITICAL]  0.999  dup-crit-a  ↔  dup-crit-b
  Suggestion: Review both — similar modification time

[HIGH]      0.940  dup-high-a  ↔  dup-high-b
  Suggestion: Review both — similar modification time

[MEDIUM]    0.901  dup-med-a  ↔  dup-med-b
  Suggestion: Review both — similar modification time

Summary: 1 critical, 1 high, 1 medium
Run 'fastskill skill remove <skill-id>' to remove a skill after review.
